--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -9,7 +9,7 @@ on:
 
 env:
   DH_IMAGE_NAME: ninescloud/efb-wechat
-  GH_IMAGE_NAME: ninescloud/efb-wechat
+  GH_IMAGE_NAME: louyongjiu/efb-wechat
 
 jobs:
   build-and-push-image:
