--- a/efb-wechat/requirements.txt
+++ b/efb-wechat/requirements.txt
@@ -2,6 +2,6 @@ ehforwarderbot
 efb-telegram-master
 efb-telegram-master[tgs]
 python-telegram-bot[socks]
+efb-search_msg-middleware
 git+https://github.com/ehForwarderBot/efb-wechat-slave#egg=efb-wechat-slave
 git+https://github.com/ehForwarderBot/efb-patch-middleware#egg=efb-patch-middleware
-git+https://github.com/ehForwarderBot/efb-search_msg-middleware#egg=efb-search_msg-middleware
